Changes in Release 1.3.0
==============================================
[JXT-28] - Implement better support for xsi:nil
[JXT-29] - Support for dateTime schema type
[JXT-60] - Add interfaces and helpers for the global attributes from the 'xml' namespace

Introduction of NamespaceManager, which handles management of namespace info that is in scope on an XMLObject.

Changes in Release 1.2.2
==============================================
[JXT-63] - Update 3rd party libraries for release 1.2.2
* Add XML serialization method that works solely on strings
* Add helper class for building XML schemas
* Clean up project POM file

Changes in Release 1.2.1
==============================================
[JXT-30] - Fix some minor race conditions in BasicParserPool
[JXT-43] - Add some additional security related helper methods
[JXT-46] - Thrown under moderate load: org.xml.sax.SAXException: FWK005 parse may not be called while parsing.
[JXT-47] - Should avoid emitting the unnecessary xml namespace declarations when marshalling
[JXT-48] - Under at some some conditions we are unnecessarily redeclaring namespace prefixes on every element in a marshalled DOM
[JXT-49] - Remove some inconsistent (and non-functional) logic in BasicParserPool
[JXT-50] - Update libs for 1.2.1 release
[JXT-51] - In BasicParserPool, avoid throwing an EmptyStackException on empty cache case
[JXT-52] - New ParserPool implementation that eliminates most locking by forgoing support for versioning and property mods over time
[JXT-54] - Method add(index, element) for a subList (e.g. of a choicegroup) only append element.
[JXT-55] - Namespace is not properly declared during marshalling if ancestor already declares a namespace with the same prefix but different URI
[JXT-56] - XMLHelper erroneously creating DOM Attribute with Document createAttribute rather than createAttributeNS
[JXT-57] - Deprecate SecurityHelperTest class in favor of moving methods over to main SecurityHelper class